--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.username=root
+spring.datasource.password=letmein
+spring.datasource.url=jdbc:postgresql://localhost:5432/web-restful-api
+spring.jpa.hibernate.ddl-auto=update
 
